test/modules/bradc/modPathDefinesMain/foo3.good
error: Ambiguous main() function (use --main-module to disambiguate):
foo3.chpl:4: note: in module M1
foo3.chpl:12: note: in module M2
